--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.0.0",
     "firebase": "^9.10.0",
     "pusher-js": "^7.4.0",
     "react": "^18.2.0",
