--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.0.0",
-    "firebase": "^9.10.0",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.11.0",
     "pusher-js": "^7.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
