--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "axios": "^1.0.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.11.0",
+    "firebase-tools": "^11.9.0",
     "pusher-js": "^7.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
