--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "firebase": "^9.11.0",
     "firebase-tools": "^11.9.0",
+    "nanoid": "^4.0.0",
     "pusher-js": "^7.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
